...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background2" translatesAutoresizingMaskIntoConstraints="NO" id="zvN-m2-c8K">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SG8-zg-Px5">
                                <rect key="frame" x="20" y="466" width="335" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Xb5-qN-MSX"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9W8-4a-ww4">
                                <rect key="frame" x="20" y="406" width="335" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="fxO-fO-FZl"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pir-nM-u7C">
                                <rect key="frame" x="20" y="296" width="335" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="O81-wJ-Mfe"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <constraint firstItem="bep-NO-3XO" firstAttribute="top" secondItem="q5Q-Ky-drk" secondAttribute="top" constant="130" id="jyE-0i-s4D"/>
                            <constraint firstItem="q5Q-Ky-drk" firstAttribute="trailing" secondItem="bep-NO-3XO" secondAttribute="trailing" constant="20" id="qJt-PX-NKo"/>
                            <constraint firstItem="bep-NO-3XO" firstAttribute="leading" secondItem="q5Q-Ky-drk" secondAttribute="leading" constant="20" id="veV-W2-OFM"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="q5Q-Ky-drk"/>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="2Xj-3g-0jc"/>
                    <connections>
                        <outlet property="contactNumberLabel" destination="wPM-Ku-wlT" id="m5A-Qy-RxF"/>
                        <outlet property="emailTextLabel" destination="Az8-Ag-p5j" id="OO4-kn-j64"/>
                        <outlet property="profilebackgroundimage" destination="xSi-c7-xob" id="Bkj-UY-EaH"/>
                        <outlet property="profileimage" destination="swz-N6-5Tk" id="Xxd-Gg-MaP"/>
                        <outlet property="profileoverview" destination="bep-NO-3XO" id="2Jh-zP-OOQ"/>
...
